# Multilanguage-Invoice-Extractor-LLM-App

./: README.md  Readme.md  app.py  pyproject.toml
.github/workflows/: main.yml
